--- a/ShowScreenForm.resx
+++ b/ShowScreenForm.resx
@@ -117,36 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="btnMin.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
+  <metadata name="timer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
   </metadata>
-  <metadata name="btnMax.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="btnClose.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAXoAAAEFCAYAAADt1CyEAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAAsSAAALEgHS3X78AAADoElE
-        QVR4Xu3UsQ1AUABAQdMorKCh0LD/PF+ikIgNXq64FW5alnkA0PVEf50HAEGf6PdtBSBE9ABxogeIEz1A
-        nOgB4kQPECd6gDjRA8SJHiBO9ABxogeIEz1AnOgB4kQPECd6gDjRA8SJHiBO9ABxogeIEz1AnOgB4kQP
-        ECd6gDjRA8SJHiBO9ABxogeIEz1AnOgB4kQPECd6gDjRA8SJHiBO9ABxogeIEz1AnOgB4kQPECd6gDjR
-        A8SJHiBO9ABxogeIEz1AnOgB4kQPECd6gDjRA8SJHiBO9ABxogeIEz1AnOgB4kQPECd6gDjRA8SJHiBO
-        9ABxogeIEz1AnOgB4kQPECd6gDjRA8SJHiBO9ABxogeIEz1AnOgB4kQPECd6gDjRA8SJHiBO9ABxogeI
-        Ez1AnOgB4kQPECd6gDjRA8SJHiBO9ABxogeIEz1AnOgB4kQPECd6gDjRA8SJHiBO9ABxogeIEz1AnOgB
-        4kQPECd6gDjRA8SJHiBO9ABxogeIEz1AnOgB4kQPECd6gDjRA8SJHiBO9ABxogeIEz1AnOgB4kQPECd6
-        gDjRA8SJHiBO9ABxogeIEz1AnOgB4kQPECd6gDjRA8SJHiBO9ABxogeIEz1AnOgB4kQPECd6gDjRA8SJ
-        HiBO9ABxogeIEz1AnOgB4kQPECd6gDjRA8SJHiBO9ABxogeIEz1AnOgB4kQPECd6gDjRA8SJHiBO9ABx
-        ogeIEz1AnOgB4kQPECd6gDjRA8SJHiBO9ABxogeIEz1AnOgB4kQPECd6gDjRA8SJHiBO9ABxogeIEz1A
-        nOgB4kQPECd6gDjRA8SJHiBO9ABxogeIEz1AnOgB4kQPECd6gDjRA8SJHiBO9ABxogeIEz1AnOgB4kQP
-        ECd6gDjRA8SJHiBO9ABxogeIEz1AnOgB4kQPECd6gDjRA8SJHiBO9ABxogeIEz1AnOgB4kQPECd6gDjR
-        A8SJHiBO9ABxogeIEz1AnOgB4kQPECd6gDjRA8SJHiBO9ABxogeIEz1AnOgB4kQPECd6gDjRA8SJHiBO
-        9ABxogeIEz1AnOgB4kQPECd6gDjRA8SJHiBO9ABxogeIEz1AnOgB4kQPECd6gDjRA8SJHiBO9ABxogeI
-        Ez1AnOgB4kQPECd6gDjRA8SJHiBO9ABxogeIEz1AnOgB4kQPECd6gDjRA8SJHiBO9ABxogeIEz1AnOgB
-        4kQPECd6gDjRA8SJHiDuFz0APW/0AFTN4wZdDFeF0frxPAAAAABJRU5ErkJggg==
-</value>
-  </data>
 </root>
